--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
 <body>
-<h2>Check this app at 10 am for the last clues!</h2>
+  <h1>Check this app at 10 am for your last present clues!</h1>
 </body>
 </html>
