--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
 <body>
-  <p style='font-size:60px'>Check this app at 10 am for your last present clues!</h1>
+  <p style='font-size:60px'>Check this app at 10 am for your last present clues!</p>
 </body>
 </html>
