--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ function more_info(source_word, word_type, success_callback) {
 function set_clue(clue, data) {
   var str = '';
   for (var i =0; i < data.length;i++){
-    str += data[i]['word'] + ' ';
+    str += data[i]['word'] + ', ';
   }
   if (!data.length)
   {
