--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </style>
 </head>
 <body>
-    <h1>Song Lyrics</h1>
+    <h1>Disappearing Words</h1>
     <select id="songSelect">
         <option value="">Select a song</option>
     </select>
