--- a/disappearingwords_beta.html
+++ b/disappearingwords_beta.html
@@ -144,7 +144,7 @@
                     label.textContent = `Verse ${index + 1}`;
                     verseCheckboxes.appendChild(checkbox);
                     verseCheckboxes.appendChild(label);
-                    verseCheckboxes.appendChild(document.createElement('br'));
+                    // verseCheckboxes.appendChild(document.createElement('br'));
                 });
             }
 
