--- a/disappearingwords.html
+++ b/disappearingwords.html
@@ -106,7 +106,15 @@
             });
 
             function fetchSongs(category) {
-                const url = category === 'hymns' ? 'hymns.json' : 'childrenssongbook.json';
+                if category === 'hymns' {
+                    const url = 'hymns.json'
+                }
+                if category === 'childrenssongs' {
+                    const url = 'choldrenssongbook.json'
+                }
+                if category === 'newsongs' {
+                    const url = 'newsongs.json'
+                }
                 fetch(url)
                     .then(response => response.json())
                     .then(data => {
