--- a/disappearingwords.html
+++ b/disappearingwords.html
@@ -69,7 +69,7 @@
     <select id="categorySelect">
         <option value="">Select Category</option>
         <option value="hymns">Hymns</option>
-        <option value="childrenssongs">Children's Songs</option
+        <option value="childrenssongs">Children's Songs</option>
         <option value="newsongs">New Songs</option>
     </select>
     <select id="songSelect">
