--- a/disappearingwords.html
+++ b/disappearingwords.html
@@ -110,7 +110,7 @@
                     const url = 'hymns.json'
                 }
                 if category === 'childrenssongs' {
-                    const url = 'choldrenssongbook.json'
+                    const url = 'childrenssongbook.json'
                 }
                 if category === 'newsongs' {
                     const url = 'newsongs.json'
