--- a/volumemeter.html
+++ b/volumemeter.html
@@ -18,10 +18,13 @@
         .gauge-container {
             margin-top: 50px;
             position: relative;
-        }
-        .gauge {
             width: 200px;
             height: 100px;
+            display: inline-block;
+        }
+        .gauge {
+            width: 100%;
+            height: 100%;
             background-color: #dcdcdc;
             border-top-left-radius: 100px;
             border-top-right-radius: 100px;
@@ -34,7 +37,7 @@
             height: 100px;
             background-color: #ff6347;
             position: absolute;
-            top: 100%;
+            bottom: -10px;
             left: 50%;
             transform-origin: bottom center;
             transform: rotate(-90deg);
