--- a/volumemeter.html
+++ b/volumemeter.html
@@ -81,21 +81,22 @@
                 let noiseFloorInitialized = false;
 
                 javascriptNode.onaudioprocess = function() {
-                    const array = new Uint8Array(analyser.frequencyBinCount);
-                    analyser.getByteFrequencyData(array);
-                    const average = array.reduce((a, b) => a + b) / array.length;
+                    const array = new Float32Array(analyser.fftSize);
+                    analyser.getFloatTimeDomainData(array);
+                    const rms = Math.sqrt(array.reduce((sum, value) => sum + value * value, 0) / array.length);
+                    const volume = rms * 1000;  // Scale up the RMS value
 
                     if (!noiseFloorInitialized) {
-                        noiseFloor = average;
+                        noiseFloor = volume;
                         noiseFloorInitialized = true;
                     }
 
-                    const adjustedVolume = average - noiseFloor;
-                    const rotation = Math.min((adjustedVolume / 128) * 180 - 90, 90);  // Scale to -90 to 90 degrees
+                    const adjustedVolume = volume - noiseFloor;
+                    const rotation = Math.min((adjustedVolume / 20) * 180 - 90, 90);  // Scale to -90 to 90 degrees
 
                     needle.style.transform = `rotate(${rotation}deg)`;
 
-                    if (adjustedVolume > 64) {
+                    if (adjustedVolume > 10) {
                         smile.innerText = '😃';
                     } else {
                         smile.innerText = '😊';
