--- a/volumemeter.html
+++ b/volumemeter.html
@@ -37,7 +37,7 @@
             height: 100px;
             background-color: #ff6347;
             position: absolute;
-            bottom: -10px;
+            bottom: 0px;
             left: 50%;
             transform-origin: bottom center;
             transform: rotate(-90deg);
@@ -62,6 +62,8 @@
     <script>
         const needle = document.getElementById('needle');
         const smile = document.getElementById('smile');
+        const volumeHistory = [];
+        const historyLength = 20; // Length of the moving average window
 
         if (navigator.mediaDevices && navigator.mediaDevices.getUserMedia) {
             navigator.mediaDevices.getUserMedia({ audio: true }).then(stream => {
@@ -92,11 +94,18 @@
                     }
 
                     const adjustedVolume = volume - noiseFloor;
-                    const rotation = Math.min((adjustedVolume / 10) * 180 - 90, 90);  // Scale to -90 to 90 degrees
+
+                    volumeHistory.push(adjustedVolume);
+                    if (volumeHistory.length > historyLength) {
+                        volumeHistory.shift();
+                    }
+
+                    const averageVolume = volumeHistory.reduce((a, b) => a + b, 0) / volumeHistory.length;
+                    const rotation = Math.min((averageVolume / 10) * 180 - 90, 90);  // Scale to -90 to 90 degrees
 
                     needle.style.transform = `rotate(${rotation}deg)`;
 
-                    if (adjustedVolume > 5) {
+                    if (averageVolume > 5) {
                         smile.innerText = '😃';
                     } else {
                         smile.innerText = '😊';
