--- a/volumemeter.html
+++ b/volumemeter.html
@@ -72,20 +72,20 @@
             color: #ff6347;
         }
         .label.inaudible {
-            left: 0;
-            top: -40px;
+            left: 10px;
+            top: -20px;
         }
         .label.quiet {
             left: 25%;
-            top: -70px;
+            top: -60px;
         }
         .label.loud {
-            left: 65%;
-            top: -70px;
+            left: 60%;
+            top: -60px;
         }
         .label.blasting {
-            right: 0;
-            top: -40px;
+            right: 10px;
+            top: -20px;
         }
         .smile {
             margin-top: 50px;
