--- a/volumemeter.html
+++ b/volumemeter.html
@@ -128,7 +128,7 @@
         const calibrateNoiseButton = document.getElementById('calibrateNoise');
         const changeFacesButton = document.getElementById('changeFaces');
         const volumeHistory = [];
-        const faces = [['😊', '😃'], ['😐', '😁'], ['🙃', '😆'], ['😶', '😄']];
+        const faces = [['😊', '😃'], ['😴', '😁'], ['🙃', '😆'], ['😶', '😄']];
         let currentFaces = 0;
         let historyLength = parseInt(averageWindowInput.value);
         let volumeRange = parseInt(volumeRangeInput.value);
