--- a/volumemeter.html
+++ b/volumemeter.html
@@ -73,19 +73,19 @@
         }
         .label.inaudible {
             left: 10px;
-            top: -20px;
+            bottom: 10px;
         }
         .label.quiet {
-            left: 25%;
-            top: -60px;
+            left: 35%;
+            bottom: 50px;
         }
         .label.loud {
-            left: 60%;
-            top: -60px;
+            right: 35%;
+            bottom: 50px;
         }
         .label.blasting {
             right: 10px;
-            top: -20px;
+            bottom: 10px;
         }
         .smile {
             margin-top: 50px;
